--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,3 +92,15 @@ h2 {
 	padding: 20px 20px 20px 20px;
 	margin-top: 20px;
 }
+
+#hang_style {
+	border-style: solid;
+	border-width: 2px;
+	border-color: black;
+	background-color: #ffffff;
+	padding: 20px 25px 20px 20px;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 6em;
+}
